# cobalt_proxy

./: .env.example  Cargo.toml
src/: file_deletion_worker.rs  main.rs
src/routes/: embed.rs  mod.rs
templates/: embed.html
