[package]
name = "cobalt_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
handlebars = { version = "6.2.0", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json"] }

dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.38"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }